<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SingInActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:contentDescription="@string/logout_text"
            android:src="@drawable/ic_login"
            android:layout_weight="@integer/lw4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:scaleType="centerCrop"/>
        <View
            android:layout_weight="@integer/lw1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="username"
            android:inputType="text"
            android:id="@+id/etUsername"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:hint="@string/username_text"
            android:layout_margin="@dimen/dp_20"
            android:textColorHint="@color/hint_eee"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="@dimen/sp_17"/>
        <EditText
            android:autofillHints="password"
            android:id="@+id/etPassword"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/dp_20"
            android:textColorHint="@color/hint_eee"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="@dimen/sp_17"/>
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/sign_in"
            android:textColor="@color/hint_eee"
            android:background="@drawable/rounded_corner_button"
            android:paddingEnd="@dimen/dp_30"
            android:paddingStart="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35" />
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_marginTop="@dimen/dp_60"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:text="@string/register_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:text="@string/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="@dimen/dp_30"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/or_signup_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:contentDescription="@string/google"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/google"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />
            <ImageButton
                android:contentDescription="@string/facebook"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/facebook_box"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>