<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:contentDescription="@string/register"
            android:src="@drawable/ic_login"
            android:layout_weight="@integer/lw4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:scaleType="centerCrop"/>
        <View
            android:layout_weight="@integer/lw1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/txtEmail"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:hint="@string/email"
            android:layout_margin="@dimen/dp_20"
            android:textColorHint="@color/hint_eee"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="@dimen/sp_17"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/sign_in"
            android:textColor="@color/hint_eee"
            android:background="@drawable/rounded_corner_button"
            android:paddingEnd="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35" />
        <TextView
            android:id="@+id/tvBack"
            android:layout_marginTop="@dimen/dp_100"
            android:textColor="@color/teal_700"
            android:text="@string/back"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_marginTop="@dimen/dp_10"
            android:textStyle="bold"
            android:text="@string/privacy"
            android:textColor="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>