<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:background="@color/purple_200"
        android:padding="@dimen/dp_20">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/dp_100"

            android:layout_height="@dimen/dp_100"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_account_circle_500"
            android:contentDescription="@string/username" />
        <TextView
            android:id="@+id/fullNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/profileImage"
            android:includeFontPadding="false"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/fullNameField"
            android:layout_toEndOf="@+id/profileImage"
            android:layout_marginStart="@dimen/dp_10"
            android:includeFontPadding="false"
            android:text="@string/role"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_minus_100"
        android:padding="@dimen/dp_20">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/dp_125"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="@integer/one"
            app:cardBackgroundColor="@color/purple_500"
            app:cardElevation="@dimen/dp_10">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_5">

                <ImageView
                    android:id="@+id/ivDonation"
                    android:contentDescription="@string/gif_text"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/donate" />

                <TextView
                    android:layout_below="@id/ivDonation"
                    android:textColor="@color/white"
                    android:id="@+id/donationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/text_123"
                    android:textSize="@dimen/sp_24" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/donationDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/donationLabel"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/gif_text"
                    android:textSize="@dimen/sp_24" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/dp_125"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="@integer/one"
            app:cardBackgroundColor="@color/purple_500"
            app:cardElevation="@dimen/dp_10">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_5">

                <ImageView
                    android:id="@+id/ivGif"
                    android:contentDescription="@string/gif_text"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/success" />

                <TextView
                    android:layout_below="@id/ivGif"
                    android:textColor="@color/white"
                    android:id="@+id/paymentLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/sol_123"
                    android:textSize="@dimen/sp_24" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/paymentDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/paymentLabel"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/text_profile"
                    android:textSize="@dimen/sp_24" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullName"
            android:id="@+id/fullName"
            android:layout_marginBottom="@dimen/dp_10">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_baseline_person_pin_24" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:id="@+id/email"
            android:layout_marginBottom="@dimen/dp_10">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_person_pin_24" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:id="@+id/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_baseline_person_pin_24" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:background="@color/purple_500"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:text="@string/update_btn" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>