<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.PrivacyActivity">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/register"
                android:src="@drawable/ic_login"
                android:layout_weight="@integer/lw4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:scaleType="centerCrop"/>
            <View
                android:layout_weight="@integer/lw1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_margin="?actionBarSize"
                android:textStyle="bold"
                android:textSize="27sp"
                android:textColor="@color/white"
                android:text="@string/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_5"
                android:layout_width="match_parent"
                android:alpha="0.5"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:text="@string/large_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvBack"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/teal_700"
                android:text="@string/back"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>