<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/ic_login"
            android:layout_weight="@integer/lw4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lh0"
            android:scaleType="centerCrop"/>
        <View
            android:layout_weight="@integer/lw1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lh0" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:paddingStart="@dimen/ps10"
            android:paddingEnd="@dimen/ps10"
            android:hint="@string/email"
            android:layout_margin="@dimen/lm20"
            android:textColorHint="@color/hint_eee"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp"/>
        <EditText
            android:paddingStart="@dimen/ps10"
            android:paddingEnd="@dimen/ps10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/lm20"
            android:textColorHint="@color/hint_eee"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp"/>
        <Button
            android:text="@string/sign_in"
            android:textColor="@color/tc_777"
            android:background="@drawable/rounded_corner_button"
            android:paddingEnd="@dimen/pr20"
            android:paddingStart="@dimen/pl20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lh35" />
        <TextView
            android:layout_marginTop="@dimen/lmt20"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/or_signup_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_marginEnd="@dimen/me15"
                android:background="@drawable/google"
                android:layout_width="@dimen/lw40"
                android:layout_height="@dimen/lh40" />
            <ImageButton
                android:layout_marginEnd="@dimen/me15"
                android:background="@drawable/facebook_box"
                android:layout_width="@dimen/lw40"
                android:layout_height="@dimen/lh40" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>